# nexus-2

./: .env  .env-example  .env.exemplo  .gitignore  Dockerfile  Makefile  README.md  RECUPERACAO.md  config.py  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
.deepseek/state/: subagents.v1.json
app/: bd.py
app/core/: autenticacao.py  calculadora_agenda.py  carregador_sql.py  criptografia.py  entregas_comum.py  gerenciador_conexoes.py  inicializador.py  orquestrador_alertas.py  orquestrador_relatorios.py  processadores.py  renderizador.py  renderizador_mensagens.py  resolvedor_parametros.py  sincronizador.py  sincronizador_ad.py
app/relatorios/: _cores.py
app/rotas/: ad.py  admin.py  agendamentos.py  alertas.py  chatbot.py  conexoes.py  despachos.py  entregas.py  permissoes.py  relatorios.py  saude.py  usuarios.py
banco/: 001_estrutura_inicial.sql  002_chatbot_sessoes.sql  003_timezone_agendamentos.sql  004_agendamentos_intervalo.sql  005_dispatch_refactor.sql  005b_migrar_alertas_condicoes.sql  006_rename_despachos_entregas.sql  007_entregas_processando.sql
docker/: metas_init.sql
docs/: PROJETO_NEXUS_HISTORICO.md  PROJETO_NEXUS_PROXIMOS_PASSOS.md  arquitetura-alertas-dispatch.md  deploy.md  firebird-setup.md  fluxo-sistema.md  guia-mvp-fluxo-completo.md  index.md  visao-geral.md
docs/explicacao/: arquitetura.md  filesystem-como-catalogo.md  index.md  modelo-de-seguranca.md  (+1 more)
testes/: test_agendamentos_e2e.py  test_calculadora_agenda.py  test_carregador_sql.py  test_criptografia.py  test_entregas_comum.py  test_resolvedor_parametros.py
(+119 files in other folders)
