[project]
name = "nexus"
version = "0.1.0"
description = "API agnóstica para geração de relatórios e alertas consultando múltiplos bancos"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=49.0.0",
    "fastapi[standard]>=0.138.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10",
    "pandas>=2.0",
    "psycopg[binary]>=3.3.4",
    "sqlalchemy>=2.0.51",
    "sqlalchemy-firebird>=2.2.0",
    "ldap3>=2.9",
    "tzdata>=2025.1",
    "weasyprint>=69.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "requests>=2.32",
]

[tool.pytest.ini_options]
testpaths = ["testes"]
python_files = ["test_*.py"]
pythonpath = ["."]